--- a/student_life.html
+++ b/student_life.html
@@ -12,10 +12,13 @@
     <a id="skip" href = "#main_content_start">Skip to Main Content</a>
     <header>
         <nav>
-            <img id="logo" src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+            <div id="logo_plus_heading">
+                <img id="logo" src="images/UMSI_signature_vertical_informal_solidblue.jpg" alt="UMSI Logo">
+                <p id="nav_heading">STUDENT SUCCESS PORTAL</p>
+            </div>
             <ul id="navigation">
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "student_life.html" id="selected">Student Life</a></li>
+                <li><a href = "student_life.html" id="selected">Life</a></li>
                 <li><a href="MSI_advising.html">Advising</a></li>
                 <li><a href="tutoring.html">Tutoring</a></li>
             </ul>
@@ -29,8 +32,10 @@
         
         <section class="body-content">
             <h2>LIVING IN U-M</h2>
-            <p>UMSI Student Life’s mission is to enrich each UMSI student’s experience while cultivating an inclusive and welcoming community at the school. We are committed to enhancing student educational experiences through programs, services, and opportunities that develop skills and foster a positive and accessible environment for all UMSI students starting with orientation through graduation. While considering multiple aspects of the student experience, Student Life strives to engage every student across UMSI’s academic programs through its pillars of student leadership, community, well-being and campus life.</p>
-            <img src="images/student_life/UMSI_DesignJam_02142022_07.jpg" width="300" alt="students gathering around a desk watching a student drawing">
+            <div class="flex-wrapper">
+                <p>UMSI Student Life’s mission is to enrich each UMSI student’s experience while cultivating an inclusive and welcoming community at the school. We are committed to enhancing student educational experiences through programs, services, and opportunities that develop skills and foster a positive and accessible environment for all UMSI students starting with orientation through graduation. While considering multiple aspects of the student experience, Student Life strives to engage every student across UMSI’s academic programs through its pillars of student leadership, community, well-being and campus life.</p>
+                <img src="images/student_life/UMSI_DesignJam_02142022_07.jpg" alt="students gathering around a desk watching a student drawing">
+            </div>
         </section>
 
         <section class="body-content">
@@ -40,25 +45,28 @@
             <section>
                 <h3>Sponsored student organizations</h3>
 
-                <div class="student-org">
-                    <h4>Doctoral Student Organization (DSO)</h4>
-                    <p>The DSO is an organization that includes all School of Information (SI) doctoral students. The mission of the DSO is to provide both academic and social support to all SI doctoral students. Email: si-dec@umich.edu</p>
-                </div>
+                <div class="grid-wrapper">
+                    <div class="student-org">
+                        <h4>Doctoral Student Organization (DSO)</h4>
+                        <p>The DSO is an organization that includes all School of Information (SI) doctoral students. The mission of the DSO is to provide both academic and social support to all SI doctoral students. Email: si-dec@umich.edu</p>
+                    </div>
 
-                <div class="student-org">
-                    <h4>Health Informatics Student Organization (HISO)</h4>
-                    <p>The Health Informatics Student Organization (HISO) serves as a forum for cohort-building activities, professional skills development, networking and student-led projects within the Master of Health Informatics program. HISO exists to also strengthen our relationships with the University of Michigan School of Information and School of Public Health communities. Email: hiso-board@umich.edu.</p>
-                </div>
+                    <div class="student-org">
+                        <h4>Health Informatics Student Organization (HISO)</h4>
+                        <p>The Health Informatics Student Organization (HISO) serves as a forum for cohort-building activities, professional skills development, networking and student-led projects within the Master of Health Informatics program. HISO exists to also strengthen our relationships with the University of Michigan School of Information and School of Public Health communities. Email: hiso-board@umich.edu.</p>
+                    </div>
 
-                <div class="student-org">
-                    <h4>Master of Applied Data Science Association (MADSA)</h4>
-                    <p>MADSA was established to serve the unique needs of Master of Applied Data Science (MADS) students by providing students with: representation and a formal mechanism for communication with the School of Information and University of Michigan; networking and social opportunities to bring together students, faculty, staff and alumni in a global community; professional development, life-long learning, and alumni connections support; and an inclusive space that strives to promote an equal and diverse representation of the MADS student body in a collaborative manner that is open and transparent. MADSA strives to push for the inclusion of the MADS program within UMSI, advocating for remote access to all learning opportunities for MADS students across all regions and time zones. Email: madsaofficers@umich.edu</p>
+                    <div class="student-org">
+                        <h4>Master of Applied Data Science Association (MADSA)</h4>
+                        <p>MADSA was established to serve the unique needs of Master of Applied Data Science (MADS) students by providing students with: representation and a formal mechanism for communication with the School of Information and University of Michigan; networking and social opportunities to bring together students, faculty, staff and alumni in a global community; professional development, life-long learning, and alumni connections support; and an inclusive space that strives to promote an equal and diverse representation of the MADS student body in a collaborative manner that is open and transparent. MADSA strives to push for the inclusion of the MADS program within UMSI, advocating for remote access to all learning opportunities for MADS students across all regions and time zones. Email: madsaofficers@umich.edu</p>
+                    </div>
                 </div>
             </section>
 
             <section>
                 <h3>Voluntary student organizations</h3>
 
+                <div class="grid-wrapper">
                 <div class="student-org">
                     <h4>American Library Association (ALA)</h4>
                     <p>The mission of the American Library Association Student Chapter is to promote awareness of, interest in and involvement in libraries, librarianship and information services among all students at the University of Michigan School of Information. To achieve our mission, we will create a space for discussing relevant issues, provide opportunities for professional development and encourage participation in the University of Michigan community and beyond. Email: alaofficers@umich.edu</p>
@@ -73,13 +81,16 @@
                     <h4>Black@SI</h4>
                     <p>Black@SI is an academic and social support network that serves Black students, alumni and accomplices of the University of Michigan School of Information (UMSI). Through our programming, we help ensure that underrepresented students can successfully contribute to both scientific research and the college’s learning environment, and positively impact our communities. Email: blackatsiorganizers@gmail.com</p>
                 </div>
+                </div>
             </section>
         </section>
 
         <section class="body-content">
-            <h2>Health and Wellness</h2>
-            <img src="images/student_life/MCOMMONS-WinterSemester2025-01.jpg" width="300" alt="Two students sitting in campus common area and chatting">
-            <p>We value wellness and understand the importance of students maintaining their physical and mental health throughout their time at UMSI. There are many campus and community resources available to support your overall well-being.</p>
+            <h2>HEALTH AND WELLNESS</h2>
+            <div class="flex-wrapper">
+                <p>We value wellness and understand the importance of students maintaining their physical and mental health throughout their time at UMSI. There are many campus and community resources available to support your overall well-being.</p>
+                <img src="images/student_life/MCOMMONS-WinterSemester2025-01.jpg" width="300" alt="Two students sitting in campus common area and chatting">
+            </div>
 
             <section>
                 <h3>School of Information Embedded Psychologist</h3>
@@ -99,46 +110,53 @@
 
         <section class="body-content">
             <h2>LIFE IN ANN ARBOR</h2>
-            <img src="images/student_life/UMSI_fallday_10.5.22_1775_0.jpg" alt="Ann Arbor Street View">
+            <div class="flex-wrapper">
+                <div>
+                    <section>
+                        <h3>General Resources</h3>
+                        <p>A number of websites provide information about life at U-M and in Ann Arbor.  Helpful places to start: </p>
+                        <ul>
+                            <li><a href="https://umich.edu/life-at-michigan/" target="_blank">Life at Michigan</a></li>
+                            <li><a href="https://studentlife.umich.edu/parents/campus-life" target="_blank">U-M Campus Life</a></li>
+                            <li><a href="https://events.umich.edu/" target="_blank">U-M Event Calendar</a></li>
+                        </ul>
+                    </section>
 
-            <section>
-                <h3>General Resources</h3>
-                <p>A number of websites provide information about life at U-M and in Ann Arbor.  Helpful places to start: </p>
-                <ul>
-                    <li><a href="https://umich.edu/life-at-michigan/">Life at Michigan</a></li>
-                    <li><a href="https://studentlife.umich.edu/parents/campus-life">U-M Campus Life</a></li>
-                    <li><a href="https://events.umich.edu/">U-M Event Calendar</a></li>
-                </ul>
-            </section>
+                    <section>
+                        <h3>Housing</h3>
+                        <p>The many options for housing both on and off campus range from co-ops to rooms in houses to freestanding apartments.</p>
+                        <ul>
+                            <li><a href="https://www.housing.umich.edu/options" target="_blank">U-M Housing Office</a></li>
+                            <li><a href="http://www.icc.coop/" target="_blank">Co-operative Housing</a></li>
+                            <li><a href="https://offcampushousing.umich.edu/listing" target="_blank">U-M Off-Campus Housing</a></li>
+                        </ul>
+                    </section>
 
-            <section>
-                <h3>Housing</h3>
-                <p>The many options for housing both on and off campus range from co-ops to rooms in houses to freestanding apartments.</p>
-                <ul>
-                    <li><a href="https://www.housing.umich.edu/options">U-M Housing Office</a></li>
-                    <li><a href="http://www.icc.coop/">Co-operative Housing</a></li>
-                    <li><a href="https://offcampushousing.umich.edu/listing">U-M Off-Campus Housing</a></li>
-                </ul>
-            </section>
-
-            <section>
-                <h3>Entertainment</h3>
-                <p>Ann Arbor is a vibrant college town with many restaurants, musical venues, museums, bars and theaters to explore. To stay current on the happenings about town, you can find a lot of information at ArborWeb.com and the Ann Arbor Visitors Bureau. In addition to these resources, check out: </p>
-                <ul>
-                    <li><a href="https://ums.org/">University Musical Society</a></li>
-                    <li><a href="https://ums.org/">Ann Arbor Civic Theatre</a></li>
-                    <li><a href="https://lsa.umich.edu/mbg/">U-M Botanical Gardens</a></li>
-                    <li><a href="https://www.theannarborartfair.com/">Ann Arbor Art Fairs</a></li>
-                    <li><a href="https://www.a2sf.org/">Ann Arbor Summer Festival</a></li>
-                </ul>
-            </section>
+                    <section>
+                        <h3>Entertainment</h3>
+                        <p>Ann Arbor is a vibrant college town with many restaurants, musical venues, museums, bars and theaters to explore. To stay current on the happenings about town, you can find a lot of information at ArborWeb.com and the Ann Arbor Visitors Bureau. In addition to these resources, check out: </p>
+                        <ul>
+                            <li><a href="https://ums.org/" target="_blank">University Musical Society</a></li>
+                            <li><a href="https://ums.org/" target="_blank">Ann Arbor Civic Theatre</a></li>
+                            <li><a href="https://lsa.umich.edu/mbg/" target="_blank">U-M Botanical Gardens</a></li>
+                            <li><a href="https://www.theannarborartfair.com/" target="_blank">Ann Arbor Art Fairs</a></li>
+                            <li><a href="https://www.a2sf.org/" target="_blank">Ann Arbor Summer Festival</a></li>
+                        </ul>
+                    </section>
+                </div>
+                <img src="images/student_life/UMSI_fallday_10.5.22_1775_0.jpg" alt="Ann Arbor Street View">
+            </div>
         </section>
 
     </main>
 
     <footer>
-        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources">UMSI Academic Advising </a></p>
+        <p>MSI Academic Advising | <a href="https://sites.google.com/umich.edu/msiacademicadvising/student-support-resources" target="_blank">UMSI Academic Advising </a></p>
         <img id="footer-logo" src="images/U-M_Logo-Hex.png" alt="University of Michigan Logo">
+        <p>© Copyright <span id="year"></span> by Andy Xu. All rights reserved. </p>
+        <script>
+            document.getElementById("year").innerHTML = new Date().getFullYear();
+        </script>
     </footer>
     
 </body>
