--- a/MSI_advising.html
+++ b/MSI_advising.html
@@ -48,26 +48,26 @@
 
                 <div>
                     <img src="images/msi_advising/big_data_analytics.png" width="150" alt="Big Data Analytics">
-                    <a class="advising-links" href="https://docs.google.com/document/d/1ptPejHcU7QmAMGjaDcY5HnfbUolypxCbR-yAr_0gOSo/edit?tab=t.0" target="_blank"><button>Degree Requirements</button></a>
-                    <a class="advising-links" href="https://docs.google.com/spreadsheets/d/1s3QW3_kr-4hnW18dS4Ga6eG8675WznAJL2yK7f1eqAQ/edit?gid=1841159775#gid=1841159775" target="_blank"><button>Course Planning Sheet</button></a>
+                    <button>Degree Requirements</button>
+                    <button>Course Planning Sheet</button>
                 </div>
 
                 <div>
                     <img src="images/msi_advising/ux_research_design.png" width="150" alt="UX Research & Design">
-                    <a class="advising-links" href="https://docs.google.com/document/d/1ptPejHcU7QmAMGjaDcY5HnfbUolypxCbR-yAr_0gOSo/edit?tab=t.0" target="_blank"><button>Degree Requirements</button></a>
-                    <a class="advising-links" href="https://docs.google.com/spreadsheets/d/1s3QW3_kr-4hnW18dS4Ga6eG8675WznAJL2yK7f1eqAQ/edit?gid=1841159775#gid=1841159775" target="_blank"><button>Course Planning Sheet</button></a>
+                    <button>Degree Requirements</button>
+                    <button>Course Planning Sheet</button>
                 </div>
 
                 <div>
                     <img src="images/msi_advising/lakes.png" width="150" alt="Libraries, Archives, and Knowledge Environments in Society (LAKES)">
-                    <a class="advising-links" href="https://docs.google.com/document/d/1ptPejHcU7QmAMGjaDcY5HnfbUolypxCbR-yAr_0gOSo/edit?tab=t.0" target="_blank"><button>Degree Requirements</button></a>
-                    <a class="advising-links" href="https://docs.google.com/spreadsheets/d/1s3QW3_kr-4hnW18dS4Ga6eG8675WznAJL2yK7f1eqAQ/edit?gid=1841159775#gid=1841159775" target="_blank"><button>Course Planning Sheet</button></a>
+                    <button>Degree Requirements</button>
+                    <button>Course Planning Sheet</button>
                 </div>
 
                 <div>
                     <img src="images/msi_advising/user_centered_agile.png" width="150" alt="User-Centered Agile Development">
-                    <a class="advising-links" href="https://docs.google.com/document/d/1ptPejHcU7QmAMGjaDcY5HnfbUolypxCbR-yAr_0gOSo/edit?tab=t.0" target="_blank"><button>Degree Requirements</button></a>
-                    <a class="advising-links" href="https://docs.google.com/spreadsheets/d/1s3QW3_kr-4hnW18dS4Ga6eG8675WznAJL2yK7f1eqAQ/edit?gid=1841159775#gid=1841159775" target="_blank"><button>Course Planning Sheet</button></a>
+                    <button>Degree Requirements</button>
+                    <button>Course Planning Sheet</button>
                 </div>
 
             </div>
@@ -114,9 +114,9 @@
                     <li>Navigating a disruption to your MSI experience</li>
                 </ul>
                 <div id="advisor-help-buttons-container">
-                    <a href="https://si-umich.navigate.eab.com/app/#/authentication/remote/" target="_blank" class="advisor-links"><button>Schedule 1:1 Appointment</button></a>
-                    <a href="https://calendar.google.com/calendar/u/0/embed?src=umsi.advising.msi@umich.edu&ctz=America/New_York" target="_blank" class="advisor-links"><button>Drop In 1:1 Appointment</button></a>
-                    <a href="https://si-umich.navigate.eab.com/app/#/authentication/remote/" target="_blank" class="advisor-links"><button>Email Us</button></a>
+                    <button>Schedule 1:1 Appointment</button>
+                    <button>Drop In 1:1 Appointment</button>
+                    <button>Email Us</button>
                 </div>
             </section>
         </section>
