--- a/index.html
+++ b/index.html
@@ -95,17 +95,17 @@
 
                     <div id="name-field">
                         <div>
-                            <label for="first-name">First Name</label>
+                            <label for="first-name-id">First Name</label>
                             <input type="text" placeholder="First Name" id="first-name-id" name="first-name">
                         </div>
 
                         <div>
-                            <label for="last-name">Last Name</label>
+                            <label for="last-name-id">Last Name</label>
                             <input type="text" placeholder="Last Name" id="last-name-id" name="last-name">
                         </div>
                     </div>
 
-                    <label for="last-name">Email</label>
+                    <label for="email-id">Email</label>
                     <input type="text" placeholder="example@email.com" id="email-id" name="email">
 
                 </fieldset>
@@ -136,6 +136,7 @@
 
                 <fieldset>
                     <legend>Your Message</legend>
+                    <label for="message">Describe your concern</label>
                     <textarea name="message" id="message" placeholder="Enter your message here..."></textarea>
                 </fieldset>
                 
